--- a/bibliography.bib
+++ b/bibliography.bib
@@ -85,6 +85,12 @@
     urldate = {2025-03-15}
 }
 
+@online{Consensus,
+    title   = {{Кот Шрёдингера без коробки: проблема консенсуса в распределённых системах}},
+    url     = {https://habr.com/ru/companies/dododev/articles/463469/},
+    urldate = {2025-05-05}
+}
+
 @book{WebServices,
     author  = {{G. Alonso, F. Casati, H. Kuno, V. Machiraju}},
     title   = {Web Services. Concepts, Architectures and Applications},
