--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -125,6 +125,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 \subsection{Угрозы безопасности распределенных СУБД}
 
 \subsubsection{Угрозы доступности, целостности, конфиденциальности данных}
+\label{threats}
 Распределенные системы управления базами данных отличаются от централизованных тем, что их работа организована на множестве удаленных узлов, 
 связанных между собой сетью. Такой подход обеспечивает расширение и масштабируемость сервисов, однако порождает специфичные угрозы доступности, 
 целостности и конфиденциальности информации. В этом разделе рассмотрим наиболее характерные угрозы, обусловленные именно распределенностью СУБД, 
@@ -136,7 +137,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \begin{itemize} 
     \item \textbf{Отказ сетевых соединений.} Нарушения коммуникационных каналов между серверами могут привести к недоступности данных для части пользователей, даже если сами узлы продолжат корректно функционировать\autocite{Karpova2009}.
-    \item \textbf{Недоступность отдельных узлов и реплик данных.} При отказе отдельных серверов становятся недоступными большие сегменты распределенной базы данных или могут нарушаться процессы репликации и синхронизации данных \autocite{Tanenbaum}. 
+    \item \textbf{Недоступность отдельных узлов и реплик данных.} При отказе отдельных серверов становятся недоступными большие сегменты распределенной базы данных или могут нарушаться процессы репликации и синхронизации данных \autocite[гл. Отказоустойчивость]{Tanenbaum}. 
     \item \textbf{Эффекты каскадных отказов.} Распределенные транзакции при некорректной реализации процедур завершения могут приводить к каскадным простоям ряда узлов вследствие накопления ожиданий завершения транзакций или блокировок ресурсов \autocite{IntroBD2014}. 
     \item \textbf{Высокие требования к скорости канала (сети) между сервером базы данных и серверами приложений.}
 \end{itemize}
@@ -146,8 +147,8 @@ DCE (Distributed Computing Environment)~--- это система програм
 В распределенных системах поддержание целостности базы данных становится технически сложнее из-за географической и сетевой удаленности ее частей:
 
 \begin{itemize} 
-    \item \textbf{Проблемы нарушения согласованности реплик.} Из-за сетевых сбоев или ошибки процессов репликации одна из реплик данных может оказаться в несогласованном состоянии с другими, что ведет к потере согласованности данных.Для противодействия этим угрозам применяются различные алгоритмы распределённого консенсуса и 
-    протоколы фиксации транзакций \autocite{Tanenbaum}.
+    \item \textbf{Проблемы нарушения согласованности реплик.} Из-за сетевых сбоев или ошибки процессов репликации одна из реплик данных может оказаться в несогласованном состоянии с другими, что ведет к потере согласованности данных. Для противодействия этим угрозам применяются различные алгоритмы распределённого консенсуса и 
+    протоколы фиксации транзакций \autocite[гл. Непротиворечивость и репликация]{Tanenbaum}.
     \item \textbf{Ошибки механизмов завершения распределенных транзакций.} Если механизмы фиксации транзакций нарушаются, данные на одном из узлов могут оказаться в противоречивом (нецелостном) состоянии. 
 \end{itemize}
 
@@ -162,14 +163,14 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Механизмы противодействия угрозам}
 
-Для защиты распределенных систем управления базами данных от специфических угроз, перечисленных ранее в подразделе "Угрозы доступности, целостности и конфиденциальности данных", применяются специализированные механизмы, обусловленные особенностями распределенного хранения данных и передачи информации по сети.
+Для защиты распределенных систем управления базами данных от специфических угроз, перечисленных ранее в подразделе "Угрозы доступности, целостности и конфиденциальности данных" ~\ref{threats}, применяются специализированные механизмы, обусловленные особенностями распределенного хранения данных и передачи информации по сети.
 
 \paragraph{Механизмы противодействия угрозам доступности:}
 
 В распределенных СУБД особое внимание уделяется защите от отказов узлов и сбоев коммуникаций. С этой целью используются следующие меры:
 
 \begin{itemize} 
-    \item \textbf{Тиражирование и репликация} — одна и та же информация размещается на нескольких узлах. В случае отказа отдельного узла пользователи получают доступ к данным на другом сервере. Для поддержки синхронизации и согласованности реплик используются распределенные транзакции и алгоритмы фиксации \autocite{Tanenbaum}.
+    \item \textbf{Тиражирование и репликация} — одна и та же информация размещается на нескольких узлах. В случае отказа отдельного узла пользователи получают доступ к данным на другом сервере. Для поддержки синхронизации и согласованности реплик используются распределенные транзакции и алгоритмы фиксации \autocite[гл. Непротиворечивость и репликация]{Tanenbaum}.
     \item \textbf{Кластеризация} — серверы объединяют в отказоустойчивые кластеры. Происходит автоматическое перенаправление запросов пользователей на здоровые узлы и предотвращение каскадных отказов.
     \item \textbf{Средства мониторинга и восстановления узлов} — для оперативной реакции на отказы используются системы мониторинга, уведомляющие администратора и автоматические средства восстановления функционирования узлов после сбоев.
 \end{itemize}
@@ -187,7 +188,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \paragraph{Механизмы противодействия угрозам конфиденциальности:}
 
-Особенности распределенных систем требуют дополнительных механизмов защиты передаваемых данных \autocite{Tanenbaum}:
+Особенности распределенных систем требуют дополнительных механизмов защиты передаваемых данных \autocite[гл. Защита]{Tanenbaum}:
 
 \begin{itemize} 
     \item \textbf{Криптографическая защита сетевых каналов} — защита целостности и конфиденциальности сообщений между узлами организуется с помощью шифрования каналов (например TLS) и протоколов взаимной аутентификации узлов.
@@ -207,7 +208,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 Основная цель распределенных транзакций заключается в обеспечении согласованности данных на всех узлах в любой момент времени (включая ситуации сбоев или отказов). 
 Формально распределённая транзакция должна удовлетворять требованиям модели ACID (атомарность, согласованность, изолированность, долговечность), что влечёт за собой 
-необходимость применения специальных методов, таких как протоколы фиксации \autocite{Tanenbaum}.
+необходимость применения специальных методов, таких как протоколы фиксации.
 
 По завершении распределённой транзакции: 
 
@@ -227,7 +228,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 Распределенная транзакция выполняет операции над данными, расположенными на нескольких сетевых узлах (серверах) одновременно. 
 В распределенных СУБД обработка транзакций значительно усложняется, так как требуется обеспечить согласованность изменений на 
 разных географически удаленных узлах базы данных, обеспечить атомарность и гарантировать целостность данных даже в случае сетевых 
-сбоев или отказов отдельных серверов \autocite{Tanenbaum}.
+сбоев или отказов отдельных серверов \autocite[гл. Введение]{Tanenbaum}.
 
 Для обеспечения выполнения этих требований распределенные СУБД используют протоколы фиксации, которые будут описаны далее в разделе 
 "Протоколы фиксации". Эти протоколы позволяет всем серверам, участвующим в транзакции, либо совместно подтвердить (зафиксировать), 
@@ -502,7 +503,7 @@ DBMS)  предложены некоторые решения. Однако эт
 \paragraph{Проблема консенсуса в распределённых системах}
 
 \textbf{Проблема консенсуса} — фундаментальная задача распределённых систем, требующая согласования общего решения между узлами в условиях возможных сбоев, задержек сообщений или 
-неисправностей участников. Формально, каждый узел системы предлагает своё начальное значение, и все корректные узлы должны прийти к единому решению, удовлетворяющему следующим условиям \autocite{Tanenbaum}: 
+неисправностей участников. Формально, каждый узел системы предлагает своё начальное значение, и все корректные узлы должны прийти к единому решению, удовлетворяющему следующим условиям \autocite{Consensus}: 
 
 \begin{itemize} 
     \item \textbf{Согласованность (Agreement)}: Все узлы принимают одно и то же значение. 
