Adding new information

--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -1,4 +1,15 @@
-\section{Безопасность статистических баз данных} \subsection{Классификация угроз и уязвимостей}
+\section{Безопасность статистических баз данных}
+
+\subsection{Определение статистической базы данных}
+
+Статистическая база данных — это специализированный тип базы данных, который разработан и оптимизирован для хранения и управления статистическими данными. Она представляет собой совокупность таблиц, где каждая таблица содержит переменные (столбцы), представляющие различные характеристики или атрибуты, и наблюдения (строки), представляющие отдельные единицы данных или объекты. Статистические базы данных часто содержат большие объемы данных, собранных из различных источников, таких как опросы, эксперименты, наблюдения и административные записи. Такие базы данных могут содержать разнообразные типы данных, включая числовые, категориальные, временные ряды и многие другие. Они могут быть созданы и использованы для различных целей, таких как проведение исследований, анализ данных, подготовка отчетов, прогнозирование и принятие решений.
+\\
+
+Статистические базы данных обычно имеют стандартизированную структуру и формат, чтобы обеспечить согласованность и удобство использования данных для статистического анализа. Они также могут включать механизмы для обновления данных, контроля качества данных и обеспечения конфиденциальности и безопасности информации.
+\\
+Статистические базы данных могут быть реализованы с использованием различных технологий, включая реляционные базы данных, NoSQL базы данных и специализированные системы управления базами данных (СУБД), которые оптимизированы для работы с большими объемами статистических данных. Они могут быть доступны как локально, так и в облачных средах, что позволяет исследователям и аналитикам легко получать доступ к данным и проводить анализ в любое время и в любом месте.
+
+\subsection{Классификация угроз и уязвимостей}
 Безопасность статистических баз данных (СБД) направлена на предотвращение раскрытия конфиденциальной информации об отдельных индивидах при публикации совокупных данных. Угрозы для СБД можно разделить на несколько категорий: (1) \textbf{непосредственное раскрытие личности} – когда злоумышленник прямо идентифицирует запись в БД (например, если в ответе на статистический запрос фигурирует уникальное значение, позволяющее вычислить данные конкретного человека); (2) \textbf{раскрытие по совокупности (косвенное раскрытие)} – когда личная информация выясняется из комбинации статистических результатов или путём сопоставления с внешними сведениями; (3) \textbf{раскрытие атрибутов} – когда хотя личность не идентифицирована точно, об отдельном респонденте выводятся некоторые чувствительные сведения. Классическим примером является атака по разнице запросов: злоумышленник может вычитать результаты двух схожих агрегатных запросов, отличающихся наличием или отсутствием одного индивида, и таким образом получить информацию о значении конкретной записи. Данная техника известна как \textit{атака дифференцирования} или «tracker attack» и была продемонстрирована ещё в ранних исследованиях по статистическим БД. Современные угрозы усугубляются наличием больших объёмов данных и вычислительной мощности. Например, \textbf{атаки реконструкции (reconstruction attacks)} позволяют, используя множество ответов на агрегатные запросы, постепенно восстановить значительную часть исходных индивидуальных данных. Теоретически доказано, что если система отвечает на слишком большое число запросов с высокой точностью (минимальным шумом), злоумышленник может в полиномиальное время реконструировать значительную долю записей исходной базы
 differentialprivacy.org
 . В работе Динура–Нисима (2003) показано, что получение «слишком точных» (хоть и слегка зашумлённых) ответов на множество запросов приводит к возможности практически полного восстановления первоначальных данных
