Adding new information.3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1632,6 +1632,103 @@
 	
 }
 
+@online{arx-deidentifier-org,
+	title={https://arx.deidentifier.org},
+	year={2025},
+	url = {https://arx.deidentifier.org},
+	urldate = {2025-04-29}
+}
+
+@online{blog-seas-upenn-edu,
+	title={https://blog.seas.upenn.edu},
+	year={2025},
+	url = {https://blog.seas.upenn.edu},
+	urldate = {2025-04-29}
+}
+
+@online{census-gov,
+	title={https://census.gov},
+	year={2025},
+	url = {https://census.gov},
+	urldate = {2025-04-29}
+}
+
+@online{differentialprivacy-org,
+	title={https://differentialprivacy.org},
+	year={2025},
+	url = {https://differentialprivacy.org},
+	urldate = {2025-04-29}
+}
+
+@online{habr-com,
+	title={https://habr.com},
+	year={2025},
+	url = {https://habr.com},
+	urldate = {2025-04-29}
+}
+
+@online{iapp-org,
+	title={https://iapp.org},
+	year={2025},
+	url = {https://iapp.org},
+	urldate = {2025-04-29}
+}
+
+@online{ihsn-org,
+	title={https://ihsn.org},
+	year={2025},
+	url = {https://ihsn.org},
+	urldate = {2025-04-29}
+}
+
+@online{journalprivacyconfidentiality-org,
+	title={https://journalprivacyconfidentiality.org},
+	year={2025},
+	url = {https://journalprivacyconfidentiality.org},
+	urldate = {2025-04-29}
+}
+
+@online{journals-plos-org,
+	title={https://journals.plos.org},
+	year={2025},
+	url = {https://journals.plos.org},
+	urldate = {2025-04-29}
+}
+
+@online{newton-ac-uk,
+	title={https://newton.ac.uk},
+	year={2025},
+	url = {https://newton.ac.uk},
+	urldate = {2025-04-29}
+}
+
+@online{nvlpubs-nist-gov,
+	title={https://nvlpubs.nist.gov},
+	year={2025},
+	url = {https://nvlpubs.nist.gov},
+	urldate = {2025-04-29}
+}
+
+@online{pydp-readthedocs-io,
+	title={https://pydp.readthedocs.io},
+	year={2025},
+	url = {https://pydp.readthedocs.io},
+	urldate = {2025-04-29}
+}
+
+@online{rg-ru,
+	title={https://rg.ru},
+	year={2025},
+	url = {https://rg.ru},
+	urldate = {2025-04-29}
+}
+
+@online{unstats-un-org,
+	title={https://unstats.un.org},
+	year={2025},
+	url = {https://unstats.un.org},
+	urldate = {2025-04-29}
+}
 
 
 
