Fix typos, add ref

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1049,6 +1049,12 @@
     year = 1996
 }
 
+@online{pgAudit-github,
+    title = {{README pgAudit на GitHub}},
+    url = {https://github.com/pgaudit/pgaudit/blob/main/README.md},
+    urldate = {2025-05-27}
+}
+
 @article{zkd,
     title = {{Zero knowledge databases}},
     author = {{thiloplanz}},
