added more text and bib
finished 3.3.5

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1280,6 +1280,12 @@
 		urldate={2025-04-21}
 }
 
+@online{WashCoursesLec5,
+    title={Lecture 5. Transactions},
+    url={https://courses.cs.washington.edu/courses/csep544/10au/slides/lecture05-transactions-concurrency-control.pdf},
+		urldate={2025-06-04}
+}
+
 @online{YTcoursepostgre,
     title={DBA1-13. 09. Системный каталог},
     url={https://www.youtube.com/watch?v=i6NQDPINglc}
@@ -1411,6 +1417,11 @@
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
 }
 
+@online{sqlhack1,
+    title={All about locking in SQL Server},
+    url={https://www.sqlshack.com/locking-sql-server/}
+}
+
 @online{bdufstec,
     url={https://bdu.fstec.ru/threat},
     year = 2025,
@@ -1443,6 +1454,11 @@
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/}
 }
 
+@online{oracleessentialsc7,
+    title={Oracle Essentials. Ch. 7. Multiuser Concurrency},
+    url={https://web.stanford.edu/class/cs345d-01/rl/oracle-locking.html}
+}
+
 @online{WikiExploit,
     author={Wikipedia},
     title={Уязвимость (компьютерная безопасность)},
@@ -1451,6 +1467,14 @@
 @online{KasperskyDailyOAuth,
     title={Google OAuth и фантомные аккаунты},
     url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/}
+}
+
+@book{DMSSMthed,
+    author    = {Ramakrishnan R., Gehrke J.},
+    title     = {{Database Management Systems Solutions Manual. 3rd edition}},
+    publisher = {McGrawHill},
+    year = 2002,
+    url = {https://pages.cs.wisc.edu/~dbbook/openAccess/thirdEdition/solutions/ans3ed-oddonly.pdf}
 }
 
 @book{ElmasriNavathe,
