Fixed and added text

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1207,6 +1207,24 @@
 		urldate={2025-04-21}
 }
 
+@online{PostgreSQLdocc37,
+    title={PostgreSQL Documentation. Chapter 37. Triggers},
+    url={https://www.postgresql.org/docs/current/triggers.html},
+		urldate={2025-04-21}
+}
+
+@online{Postgresqlcom,
+    title={Postgre SQL Commands. Part 6. Reference},
+    url={https://www.postgresql.org/docs/current/sql-commands.html},
+		urldate={2025-04-21}
+}
+
+@online{Postgresqltrig,
+    title={PostgreSQL 7.4.30 Documentation. Chapter 35. Triggers},
+    url={https://www.postgresql.org/docs/7.4/triggers.html},
+		urldate={2025-04-21}
+}
+
 @online{PostgreSQLlockh1,
     title={PostgreSQL Source Code. lock.h},
     url={https://doxygen.postgresql.org/lock_8h_source.html},
@@ -1280,6 +1298,12 @@
 		urldate={2025-04-21}
 }
 
+@online{Mysqldoc6,
+    title={MySQL 8.0 Reference Manual. Chapter 27},
+    url={https://dev.mysql.com/doc/refman/8.4/en/stored-objects.html},
+		urldate={2025-04-21}
+}
+
 @online{WashCoursesLec5,
     title={Lecture 5. Transactions},
     url={https://courses.cs.washington.edu/courses/csep544/10au/slides/lecture05-transactions-concurrency-control.pdf},
@@ -1288,12 +1312,14 @@
 
 @online{YTcoursepostgre,
     title={DBA1-13. 09. Системный каталог},
-    url={https://www.youtube.com/watch?v=i6NQDPINglc}
+    url={https://www.youtube.com/watch?v=i6NQDPINglc},
+    urldate = {2025-06-04}
 }
 
 @online{IntuitMySQLadm,
     title={Администрирование MySQL. Лекция 7: Каталог данных MySQL},
-    url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530}
+    url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530},
+    urldate = {2025-06-04}
 }
 
 @online{IntuitThreats,
@@ -1304,72 +1330,104 @@
 
 @online{HabrTsql,
     title={Исследуем базы данных с помощью T-SQL},
-    url={https://habr.com/ru/articles/241079/}
+    url={https://habr.com/ru/articles/241079/},
+    urldate = {2025-06-04}
 }
 
 @online{HabrCloudThreats,
     title={Угрозы облачных вычислений и методы их защиты},
-    url={https://habr.com/ru/articles/183168/}
+    url={https://habr.com/ru/articles/183168/},
+    urldate = {2025-06-04}
 }
 
 @online{professorweb,
     title={Transact-SQL. Системный каталог},
-    url={https://professorweb.ru/my/sql-server/2012/level3/3_4.php}
+    url={https://professorweb.ru/my/sql-server/2012/level3/3_4.php},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserver,
     title={Microsoft SQL Server. Представления системного каталога (Transact-SQL)},
-    url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
+    url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16},
+    urldate = {2025-06-04}
+}
+
+@online{MicrosoftLearnDDLTrig,
+    title={Microsoft SQL Server. DDL Triggers},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/triggers/ddl-triggers?view=sql-server-ver16},
+    urldate = {2025-06-04}
+}
+
+@online{MicrosoftLearnNestTrig,
+    title={Microsoft SQL Server. Create Nested Triggers},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/triggers/create-nested-triggers?view=sql-server-ver17},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverInd,
     title={Microsoft SQL Server. Indexes},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverSysDymView,
     title={Microsoft SQL Server. System dynamic management views},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/system-dynamic-management-views?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/system-dynamic-management-views?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTab,
     title={Microsoft SQL Server. Tables},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverPerm,
     title={Microsoft SQL Server. Get started with Database Engine permissions},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTransLog,
     title={Microsoft SQL Server. The transaction log},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/logs/the-transaction-log-sql-server?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/logs/the-transaction-log-sql-server?view=sql-server-ver16},
+    urldate = {2025-06-04}
+}
+
+@online{msSysKeyConstraints,
+    title={Microsoft SQL Server.},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-catalog-views/sys-key-constraints-transact-sql?view=sql-server-ver17},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverQueryStat,
     title={Microsoft SQL Server.},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-query-stats-transact-sql?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-query-stats-transact-sql?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTranLocks,
     title={Microsoft SQL Server.},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverMasterdb,
     title={Microsoft SQL Server. Master database},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/master-database?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/master-database?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTempdb,
     title={Microsoft SQL Server. tempdb database},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/tempdb-database?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/tempdb-database?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverDBfiles,
     title={Microsoft SQL Server. Database files and filegroups},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/database-files-and-filegroups?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/database-files-and-filegroups?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverFileLoc,
@@ -1379,32 +1437,38 @@
 
 @online{MicrosoftLearnSQLserverIsolation,
     title={Microsoft SQL Server. Set transaction isolation},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTabHints,
     title={Microsoft SQL Server. Table hints},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/queries/hints-transact-sql-table?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/queries/hints-transact-sql-table?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverTransLock,
     title={Microsoft SQL Server. Transaction locking and row versioning guide},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{MicrosoftLearnSQLserverSetLockTout,
     title={Microsoft SQL Server. SET LOCK TIMEOUT},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-lock-timeout-transact-sql?view=sql-server-ver16}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-lock-timeout-transact-sql?view=sql-server-ver16},
+    urldate = {2025-06-04}
 }
 
 @online{OracleRedoLog,
     title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
-    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
+    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc0,
     title={Oracle Database Reference. Part I Initialization Parameters},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/initialization-parameters-2.html}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/initialization-parameters-2.html},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc1,
@@ -1414,12 +1478,21 @@
 
 @online{oracledbdoc2,
     title={Oracle Database Reference. Part III Dynamic Performance Views},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html},
+    urldate = {2025-06-04}
 }
+
+@online{oracledbdoc6,
+    title={Trigger Enhancements in Oracle Database},
+    url={https://oracle-base.com/articles/11g/trigger-enhancements-11gr1},
+    urldate = {2025-06-04}
+}
+
 
 @online{sqlhack1,
     title={All about locking in SQL Server},
-    url={https://www.sqlshack.com/locking-sql-server/}
+    url={https://www.sqlshack.com/locking-sql-server/},
+    urldate = {2025-06-04}
 }
 
 @online{bdufstec,
@@ -1447,6 +1520,16 @@
 @online{oracledbdoc5,
     title={Oracle Database Concepts. Part III. Oracle Transaction Management. Ch.9. Data Concurrency and Consistency},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C}
+}
+
+@online{oracledbdoc7,
+    title={Oracle Database CREATE TRIGGER},
+    url={https://docs.oracle.com/cd/B13789_01/server.101/b10759/statements_7004.htm}
+}
+
+@online{oracledbdoc8,
+    title={Oracle Database Using Trigger},
+    url={https://docs.oracle.com/cd/B10500_01/appdev.920/a96590/adg13trg.htm}
 }
 
 @online{oracledbreference,
