Added examples of consensus algorithms

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -85,6 +85,20 @@
     urldate = {2025-03-15}
 }
 
+@online{raft,
+    author  = {{Dodo Engineering}},
+    title   = {{Как сервера договариваются друг с другом: алгоритм распределённого консенсуса Raft}},
+    url     = {https://habr.com/ru/companies/dododev/articles/469999/},
+    urldate = {2025-06-7}
+}
+
+@online{paxos,
+    author  = {{OTUS}},
+    title   = {{Кратко про Raft и Paxos: путь к надежным распределенным базам данных}},
+    url     = {https://habr.com/ru/companies/otus/articles/793198/},
+    urldate = {2025-06-7}
+}
+
 @online{Consensus,
     title   = {{Кот Шрёдингера без коробки: проблема консенсуса в распределённых системах}},
     url     = {https://habr.com/ru/companies/dododev/articles/463469/},
