--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -500,7 +500,7 @@ DBMS)  предложены некоторые решения. Однако эт
 
 \subsubsection{Алгоритмы консенсуса}
 
-\paragraph{Проблема консенсуса в распределённых системах}
+\paragraph{Проблема консенсуса в распределённых системах}~\\ 
 
 \textbf{Проблема консенсуса} — фундаментальная задача распределённых систем, требующая согласования общего решения между узлами в условиях возможных сбоев, задержек сообщений или 
 неисправностей участников. Формально, каждый узел системы предлагает своё начальное значение, и все корректные узлы должны прийти к единому решению, удовлетворяющему следующим условиям \autocite{Consensus}: 
@@ -511,7 +511,7 @@ DBMS)  предложены некоторые решения. Однако эт
     \item \textbf{Завершаемость (Termination)}: Каждый корректный узел в конечном итоге принимает решение. 
 \end{itemize}
 
-\paragraph{Теоретические ограничения} 
+\paragraph{Теоретические ограничения}~\\ 
 
 В распределённых системах достижение консенсуса осложнено теоретическими ограничениями: 
 
@@ -520,13 +520,23 @@ DBMS)  предложены некоторые решения. Однако эт
     \item \textbf{CAP-теорема} (Brewer, 2000): Система может гарантировать только два из трёх свойств: согласованность (Consistency), доступность (Availability), устойчивость к разделению (Partition tolerance) \autocite{Brewer2012}. 
 \end{itemize}
 
-\paragraph{Типы отказов} 
+\paragraph{Типы отказов}~\\ 
 
 Алгоритмы консенсуса классифицируются по типу отказов, которые они могут преодолеть: 
 
 \begin{itemize} 
     \item \textbf{Аварийные отказы (Crash faults)}: Узел перестаёт отвечать, но не действует злонамеренно. 
     \item \textbf{Византийские отказы (Byzantine faults)}: Узел может произвольно искажать данные или нарушать протокол \autocite{Castro1999}. 
+\end{itemize}
+
+\paragraph{Примеры алгоритмов консенсуса}~\\ 
+
+\begin{itemize} 
+    \item \textbf{Paxos}: cуть алгоритма заключается в процессе, в ходе которого участники системы (proposers, acceptors и learners) взаимодействуют по строго определенным правилам, 
+    чтобы прийти к единому согласованному решению. Основные этапы алгоритма включают предложение значения (proposal), голосование за предложение и подтверждение(acceptance) предложенного 
+    значения большинством узлов \autocite{paxos}. 
+    \item \textbf{Raft}: для обеспечения консенсуса среди серверов выбирается лидер, который принимает запросы на изменение данных и координирует их распространение на остальные узлы. 
+    При отказе лидера автоматически проводится новый выбор лидера, что обеспечивает устойчивость и согласованность системы. \autocite{raft}. 
 \end{itemize}
 
 
