Add new urls, change format of it and fix some errors in text

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1639,97 +1639,100 @@
 	urldate = {2025-04-29}
 }
 
-@online{blog-seas-upenn-edu,
-	title={https://blog.seas.upenn.edu},
-	year={2025},
-	url = {https://blog.seas.upenn.edu},
-	urldate = {2025-04-29}
-}
-
-@online{census-gov,
-	title={https://census.gov},
-	year={2025},
-	url = {https://census.gov},
-	urldate = {2025-04-29}
-}
-
 @online{differentialprivacy-org,
-	title={https://differentialprivacy.org},
+	title={The Theory of Reconstruction Attacks},
 	year={2025},
-	url = {https://differentialprivacy.org},
+	url = {https://differentialprivacy.org/reconstruction-theory},
 	urldate = {2025-04-29}
 }
 
-@online{habr-com,
-	title={https://habr.com},
+@online{cornell-edu,
+	title={Reconstruction-abetted re-identification attacks and other traditional vulnerabilities},
 	year={2025},
-	url = {https://habr.com},
-	urldate = {2025-04-29}
-}
-
-@online{iapp-org,
-	title={https://iapp.org},
-	year={2025},
-	url = {https://iapp.org},
-	urldate = {2025-04-29}
-}
-
-@online{ihsn-org,
-	title={https://ihsn.org},
-	year={2025},
-	url = {https://ihsn.org},
-	urldate = {2025-04-29}
-}
-
-@online{journalprivacyconfidentiality-org,
-	title={https://journalprivacyconfidentiality.org},
-	year={2025},
-	url = {https://journalprivacyconfidentiality.org},
+	url = {https://blogs.cornell.edu/abowd/special-materials/245-2/},
 	urldate = {2025-04-29}
 }
 
 @online{journals-plos-org,
-	title={https://journals.plos.org},
+	title={Enabling realistic health data re-identification risk assessment through adversarial modeling},
 	year={2025},
-	url = {https://journals.plos.org},
+	url = {https://pmc.ncbi.nlm.nih.gov/articles/PMC8711654/},
 	urldate = {2025-04-29}
 }
 
-@online{newton-ac-uk,
-	title={https://newton.ac.uk},
-	year={2025},
-	url = {https://newton.ac.uk},
-	urldate = {2025-04-29}
+@online{ISO-IEC-20889-2018,
+    title={ISO-IEC-20889-2018},
+    year={2025},
+    url = {https://cdn.standards.iteh.ai/samples/69373/f0200837a1484de9891b77fb7688e24b/ISO-IEC-20889-2018.pdf},
+    urldate = {2025-04-29}
+}
+
+@online{ISO-IEC-27559-2022,
+    title={ISO-IEC-27559-2022},
+    year={2025},
+    url = {https://www.iso.org/standard/71677.html},
+    urldate = {2025-04-29}
+}
+
+@online{census-gov,
+    title={Census Bureau Sets Key Parameters to Protect Privacy in 2020 Census Results},
+    year={2025},
+    url = {https://www.census.gov/newsroom/press-releases/2021/2020-census-key-parameters.html},
+    urldate = {2025-04-29}
 }
 
 @online{nvlpubs-nist-gov,
-	title={https://nvlpubs.nist.gov},
-	year={2025},
-	url = {https://nvlpubs.nist.gov},
-	urldate = {2025-04-29}
-}
-
-@online{pydp-readthedocs-io,
-	title={https://pydp.readthedocs.io},
-	year={2025},
-	url = {https://pydp.readthedocs.io},
-	urldate = {2025-04-29}
-}
-
-@online{rg-ru,
-	title={https://rg.ru},
-	year={2025},
-	url = {https://rg.ru},
-	urldate = {2025-04-29}
+    title={Guidelines for Evaluating Differential Privacy Guarantees},
+    year={2025},
+    url = {https://csrc.nist.gov/pubs/sp/800/226/final},
+    urldate = {2025-04-29}
 }
 
 @online{unstats-un-org,
-	title={https://unstats.un.org},
-	year={2025},
-	url = {https://unstats.un.org},
-	urldate = {2025-04-29}
+    title={Fundamental Principles of Official Statistics},
+    year={2025},
+    url = {https://unstats.un.org/unsd/dnss/gp/fundprinciples.aspx},
+    urldate = {2025-04-29}
 }
 
+@online{rg-ru,
+    title={Закон об официальном статучете и системе госстатистики},
+    year={2025},
+    url = {https://rg.ru/documents/2007/12/06/statistika-dok.html},
+    urldate = {2025-04-29}
+}
 
+@online{GOST,
+    title={Базовая архитектура защиты персональных данных},
+    year={2025},
+    url = {https://docs.cntd.ru/document/1200179663},
+    urldate = {2025-04-29}
+}
 
+@online{GDPR25,
+    title={GDPR article 25},
+    year={2025},
+    url = {https://gdpr-text.com/ru/read/article-25},
+    urldate = {2025-04-29}
+}
 
+@online{GDPR89,
+    title={GDPR article 89},
+    year={2025},
+    url = {https://gdpr-text.com/ru/read/article-89},
+    urldate = {2025-04-29}
+}
+
+@online{FZ152,
+    title={Федеральный закон от 27.07.2006 N 152-ФЗ (ред. от 02.07.2021) "О персональных данных" (с изменениями и дополнениями)},
+    year={2025},
+    url = {https://www.consultant.ru/document/cons_doc_LAW_61801/},
+    urldate = {2025-04-29}
+}
+
+@online{pydp-readthedocs-io,
+    title={Google differential privacy},
+    year={2025},
+    url = {https://github.com/google/differential-privacy},
+    urldate = {2025-04-29}
+}
