--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1695,6 +1695,13 @@
     urldate = {2025-04-29}
 }
 
+@online{journalprivacyconfidentiality-org,
+    title={Cryptanalysis of Basic Bloom Filters Used for Privacy Preserving Record Linkage},
+    year={2025},
+    url = {https://journalprivacyconfidentiality.org/index.php/jpc/article/view/640},
+    urldate = {2025-04-29}
+}
+
 @online{rg-ru,
     title={Закон об официальном статучете и системе госстатистики},
     year={2025},
