Change format of input tex doc

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1717,14 +1717,14 @@
 }
 
 @online{GDPR25,
-    title={GDPR article 25},
+    title={Article 25 GDPR. Data protection by design and by default},
     year={2025},
     url = {https://gdpr-text.com/ru/read/article-25},
     urldate = {2025-04-29}
 }
 
 @online{GDPR89,
-    title={GDPR article 89},
+    title={Article 89 GDPR. Safeguards and derogations relating to processing for archiving purposes in the public interest, scientific or historical research purposes or statistical purposes},
     year={2025},
     url = {https://gdpr-text.com/ru/read/article-89},
     urldate = {2025-04-29}
