Change ARX url name in bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1633,7 +1633,7 @@
 }
 
 @online{arx-deidentifier-org,
-	title={https://arx.deidentifier.org},
+	title={ARX Data Anonymization Tool},
 	year={2025},
 	url = {https://arx.deidentifier.org},
 	urldate = {2025-04-29}
